# utils

./: .gitignore  README.md
R/: cop_processing.R
matlab/: ffts_FVA.m
python/: create_pyproject.py  pyproject.toml  testador.ipynb
python/PPGCR_utils/: COP.py  EMG.py  __init__.py  plano_de_implementacao.txt
python/dados/: 005_PP_Pós_COP.txt
python/examples/: basic_usage.ipynb
python/examples/data/: emg_table.txt
python/src/ppgcr_utils/: __init__.py  cop.py  emg.py  plotting.py
python/src/ppgcr_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
