["build-system"]
requires = ["setuptools>=68", "wheel"]
"build-backend" = "setuptools.build_meta"

[project]
name = "ppgcr-utils"
version = "0.1.0"
description = "Utilities for signal processing and data analysis in Python."
readme = "README.md"
"requires-python" = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Conrado Torres" }]
keywords = ["signal processing", "EMG", "COP", "biomechanics", "data analysis"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Scientific/Engineering"]
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]
urls = { Homepage = "https://github.com/SEU_USUARIO/PPGCR_utils", Repository = "https://github.com/SEU_USUARIO/PPGCR_utils" }

[tool]

[tool.setuptools]
"package-dir" = { "" = "src" }
"include-package-data" = false

[tool.setuptools.packages]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*"]
